thrift_store_frontend/src/components/MainContent.css
.section-title {
  text-align: center;
  margin-top: 4em;
  font-weight: bolder;
}
.main-section {
  display: flex;
  flex-direction: column;
}

.section-first,.section-second,.section-third {
  display: flex;
}
.text-block-container {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}
.first-title {
    margin-bottom: 2em;
}
.first-summary {
    max-width: 75%;
}


.image-container {
  max-width: 50%;
  max-height: 50%;
  padding: 6%;
}

.section-second {
    flex-direction: row-reverse;
}

.main-sub-section .section {
    margin-bottom: -100px;
}
.first-title {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 400 ;
    line-height: 1.6;
}

